--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,14 +190,16 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        left: 0;
+        left: 62px;
         top: 0;
-        bottom: 0;
+        bottom: -80px;
         margin: auto 0;
         background-image: url(../images/header-bg.svg);
         background-size: 100%;
         background-position: center center;
         background-repeat: no-repeat;
+        position:  fixed;
+        z-index: -1;
     }
     .header-section{
         width: 100%;
@@ -205,8 +207,14 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 150px 0 100px 0;
+        padding: 150px 0 00px 0;
         z-index: 2;
+    }
+    @media screen and max-width(572px){
+        .header-section{
+            
+            padding: 150px 0 0px 0 !important;
+        }
     }
     .header-container{
         position: relative;
@@ -223,7 +231,7 @@
         font-size: 40px;
         font-weight: 700;
         line-height: 1.2;
-        color: #000;
+        color: #fff;
         margin-bottom: 20px;
         max-width: 590px;
     }
@@ -240,15 +248,17 @@
         font-weight: 400;
         line-height: 1.4;
         color: #8A8A8A;
-        margin-bottom: 40px;
+        margin-bottom: 27px;
     }
     .header-details{
-        font-size: 15px;
-        font-weight: 400;
-        line-height: 1.6;
+        color: #fffffii;
+        font-size: 17px;
+        font-weight: 500;
+        line-height: 1.7;
         color: #000;
         max-width: 450px;
-        margin-bottom: 15px;
+        margin-bottom: 42px;
+        letter-spacing: 1px;
     }
     .header-subtitle{
         width: 36%;
@@ -258,7 +268,7 @@
         font-weight: 600;
         line-height: 1.6;
         color: #fff;
-        margin-bottom: 40px;
+        margin-bottom: 58px;
         padding: 12px 1% 12px 2%;
         cursor: pointer;
     }
@@ -394,17 +404,20 @@
     }
     .highlights-container{
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         flex-direction: row;
         position: relative;
 		z-index: 2;
+        font-weight: bold;
     }
     .highlights-card{
         border-radius: 20px;
         padding: 35px 40px 45px 40px;
         background-color: #fff;
         margin: 10px;
+        font-weight: ;
     }
     .highlights-card-center{
         margin: 0;
@@ -1389,3 +1402,25 @@
         color: #00E676;
     } 
     
+.container-again{
+    width: 100%; background: linear-gradient(50deg,#EC41FF, #0984E3);;
+ height: 90px; 
+    font-size: 38px; 
+    padding: 11px; color: #fff; 
+    text-align: center; 
+    font-family: 'Montserrat', sans-serif; font-weight: 400;
+}
+.container-again1{
+   background:  #EC41FF; 
+    cursor: pointer;
+     margin-left: 100px; 
+     width: 10%; 
+     font-family: 'Montserrat', sans-serif; 
+    font-weight: bold;
+    color: #fff;
+}
+
+#unique1{
+   margin-top: 31px;
+}
+
