--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -9,7 +9,7 @@
   .card_new {
     margin: 30px auto;
     width: 300px;
-    height: 300px;
+    height: 230px;
     border-radius: 40px;
   /* box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22); */
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;  
@@ -83,6 +83,38 @@
       /* On small screens, we are no longer using row direction but column */
       flex-direction: column;
     }
+    .container-again{
+      height: 150px;
+      font-size: 24px;
+    }
+    .container-again1{
+      width: 200px;
+     margin: auto;
+     margin-top: 10px;
+    }
+  }
+  @media all and (max-width: 768px){
+    .container-again{
+      height: 150px;
+      font-size: 30px;
+    }
+    .container-again1{
+      width: 200px;
+     margin: auto;
+     margin-top: 0px;
+    }
+  }
+  @media all and (max-width: 572px){
+    .container-again{
+      height: 200px;
+      font-size: 30px;
+    }
+    .container-again1{
+      width: 200px;
+     margin: auto;
+     
+    }
+
   }
   
   
