--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,10 +58,11 @@
         opacity: 0.5;
     }
     .title{
-        font-size: 42px;
+        font-size: 45px;
         font-weight: 700;
         color: #404040;
-        margin-bottom: 20px;
+        margin-bottom: 46px;
+        margin-top: -78px;
         line-height: 1;
     }
     .title-details{
@@ -69,6 +70,9 @@
         line-height: 1.4;
         color: #8A8A8A;
         margin-bottom: 10px;
+        line-height: 1.6;
+        letter-spacing: 1px;
+
     }
 	@keyframes float {
 		0%{
@@ -190,7 +194,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        left: 62px;
+        left: 168px;
         top: 0;
         bottom: -80px;
         margin: auto 0;
@@ -251,11 +255,11 @@
         margin-bottom: 27px;
     }
     .header-details{
-        color: #fffffii;
+        color: #fff;
         font-size: 17px;
-        font-weight: 500;
+        font-weight: 400;
         line-height: 1.7;
-        color: #000;
+        color: #fff;
         max-width: 450px;
         margin-bottom: 42px;
         letter-spacing: 1px;
@@ -374,6 +378,9 @@
         .header-title{
             font-size: 50px;
         }
+        .header-subtitle{
+            margin-bottom: -43px;
+        }
     }
 /* 4. HIGHLIGHTS SECTION */ 
     .highlights-bg-section{
@@ -484,7 +491,7 @@
     }
 /* 5. FEATURES SECTION */
     .features-section{
-        padding: 38px 0;
+        padding: 79px 0 38px 0; 
     }
     .features-container{
         display: flex;
@@ -814,7 +821,10 @@
         background: linear-gradient(30deg, #EC41FF, #0984E3);
         padding: 100px 0 100px 0;
         position: relative;
-        margin-bottom: 150px;
+        margin-bottom: -11px;
+        margin-top: 121px;
+        z-index: 1000;
+
     }
     .perfection-bg-section-left{
         position: absolute;
@@ -903,6 +913,7 @@
         .perfection-section{
             padding-bottom: 175px;
             margin-bottom: 175px;
+
         }
         .perfection-bg-section-right{
             width: 30%;
@@ -926,8 +937,9 @@
     }
     @media screen and (max-width: 575.98px){
         .perfection-section{
-            padding-bottom: 120px;
+            padding-bottom: 35px;
             margin-bottom: 120px;
+            z-index: -1000;
         }
         .perfection-bg-section-left{
             width: 50%;
@@ -1256,6 +1268,7 @@
     @media screen and (max-width: 767.98px){
         .title{
             font-size: 36px;
+            margin-top: 3px;
         }
         .highlights{
             padding: 50px 0;
