--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,16 +194,14 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        left: 168px;
+        left: 0;
         top: 0;
-        bottom: -80px;
+        bottom: 0;
         margin: auto 0;
         background-image: url(../images/header-bg.svg);
         background-size: 100%;
         background-position: center center;
         background-repeat: no-repeat;
-        position:  fixed;
-        z-index: -1;
     }
     .header-section{
         width: 100%;
@@ -373,10 +371,10 @@
             padding-top: 200%;
             left: -110%;
         }
-        .header-bg-section::before{
+        /* .header-bg-section::before{
             left: 140px;
             bottom: -75px;
-        }
+        } */
     }
     @media screen and (max-width: 575.98px){
         .header-title{
@@ -589,6 +587,7 @@
         background-repeat: no-repeat;
     }
     .partners-bg-section-right{
+        display: none;
         position: absolute;
         width: 25%;
         padding-top: 25%;
@@ -1318,7 +1317,7 @@
         
         #number h2, #number h2 a{
             font-size: 12px;
-            /*color: #000 !important;*/
+            color: #000 !important;
         }
         .header-scrolled{
             padding-top: 0;
