--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        left: 0;
+        left: 196px;
         top: 0;
         bottom: 0;
         margin: auto 0;
@@ -325,6 +325,10 @@
         background: #dc3545;
         color: #ffffff;
     }
+    
+        .header_hidden{
+            display: none;
+        }
     @media screen and (max-width: 1499.98px){
         .header-bg-section{
             top: 35%;
@@ -364,6 +368,12 @@
         .header-img-section{
             margin-bottom: 91px;
         }
+        .header_hidden_pc{
+            display: none;
+        }
+        .header_hidden{
+            display: block;
+        }
     }
     @media screen and (max-width: 767.98px){
         .header-bg-section{
@@ -375,6 +385,20 @@
             left: 140px;
             bottom: -75px;
         } */
+        .header-bg-section::before{
+            left: 0;
+        }
+        .allyouparent{
+            padding: 5px;
+            line-height: 0.6;
+            font-weight: 500;
+        }
+        .allyou{
+            font-size: 21px;
+        }
+        .header_hidden_pc{
+            display: none;
+        }
     }
     @media screen and (max-width: 575.98px){
         .header-title{
@@ -383,6 +407,37 @@
         .header-subtitle{
             margin-bottom: -43px;
         }
+        .header-bg-section::before{
+            left: 0;
+        }
+        .allyouparent{
+            padding: 5px;
+            line-height: 0.6;
+            font-weight: 500;
+        }
+        .allyou{
+            font-size: 21px;
+        }
+        .header_hidden_pc{
+            display: none;
+        }
+        .header_hidden{
+            display: block;
+            padding-left: 26px;
+            line-height: 1.7;
+        }
+        .header_hidden li{
+            align-items: left;
+            padding-left: px;
+        }
+        .web1{
+            margin-top: -60px;
+        }
+        .web1header{
+            margin-bottom: -60px;
+        }
+
+
     }
 /* 4. HIGHLIGHTS SECTION */ 
     .highlights-bg-section{
@@ -822,11 +877,12 @@
 /* 8. PERFECTION SECTION */
     .perfection-section{
         background: linear-gradient(30deg, #EC41FF, #0984E3);
-        padding: 100px 0 100px 0;
+        padding: 100px 0 13px 0;
         position: relative;
         margin-bottom: -11px;
         margin-top: 121px;
         z-index: 1000;
+
 
     }
     .perfection-bg-section-left{
@@ -895,7 +951,7 @@
         text-align: left;
     }
     .perfection-title-section ul li{
-       margin: 20px 0;
+       margin: 11px 0;
     }
     .perfection-header-img{
         position: absolute;
@@ -929,6 +985,7 @@
         .perfection-section{
             padding-bottom: 150px;
             margin-bottom: 150px;
+            z-index: -1000;
         }
         .perfection-section img{
             width: 100%;
