--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -116,16 +116,19 @@
   @media all and (max-width: 572px){
     .container-again{
       margin-top: 11px;
-      height: 200px;
-      font-size: 30px;
+      height: 145px;
+      font-size: 27px;
+      margin-bottom: ;
     }
     .container-again1{
       width: 200px;
      margin: auto;
+
      
     }
     #unique1{
-      height: 210px;
+      height: 145px;
+      font-size: 23px;
 
     }
     #unique2{
